@@ -36,6 +36,7 @@ enum MILESTONE {MILESTONE_CREATED
                ,MILESTONE_EOL
 #ifdef UBUNTU
                ,MILESTONE_EOL_SERVER
+               ,MILESTONE_EOL_ESM
 #endif
                ,MILESTONE_COUNT
 };
@@ -70,6 +71,9 @@ static inline bool date_ge(const date_t *date1, const date_t *date2);
 static inline bool created(const date_t *date, const distro_t *distro);
 static inline bool released(const date_t *date, const distro_t *distro);
 static inline bool eol(const date_t *date, const distro_t *distro);
+#ifdef UBUNTU
+static inline bool eol_esm(const date_t *date, const distro_t *distro);
+#endif
 static inline int milestone_to_index(const char *milestone);
 
 #endif // __DISTRO_INFO_UTIL_H__
