@@ -171,12 +171,13 @@ Options:
       --date=DATE        date for calculating the version (default: today)
       --series=SERIES    series to calculate the version for
   -y[MILESTONE]          additionally, display days until milestone
-      --days=[MILESTONE] (created, release, eol, eol-server)
+      --days=[MILESTONE] (created, release, eol, eol-server, eol-esm)
   -a  --all              list all known versions
   -d  --devel            latest development version
       --lts              latest long term support (LTS) version
   -s  --stable           latest stable version
       --supported        list of all supported stable versions
+      --supported-esm    list of all Ubuntu Advantage supported stable versions
       --unsupported      list of all unsupported stable versions
   -c  --codename         print the codename (default)
   -f  --fullname         print the full name
@@ -188,7 +189,7 @@ See ubuntu-distro-info(1) for more info.'
 }
 
 testExactlyOne() {
-    local result='ubuntu-distro-info: You have to select exactly one of --all, --devel, --latest, --lts, --stable, --supported, --series, --unsupported.'
+    local result='ubuntu-distro-info: You have to select exactly one of --all, --devel, --latest, --lts, --stable, --supported, --supported-esm, --series, --unsupported.'
     failure "" "$result"
     failure "--date=2009-01-10 -sad" "$result"
 }
@@ -301,10 +302,10 @@ testDays() {
     success "--date=$date --lts --days=eol -f" "Ubuntu 12.04 LTS \"Precise Pangolin\" 1826"
     success "--date=$date --lts --days=eol -r" "12.04 LTS 1826"
 
-    success "--date=$date --lts --days=eol-server" "(unknown)"
-    success "--date=$date --lts --days=eol-server -c" "precise (unknown)"
-    success "--date=$date --lts --days=eol-server -f" "Ubuntu 12.04 LTS \"Precise Pangolin\" (unknown)"
-    success "--date=$date --lts --days=eol-server -r" "12.04 LTS (unknown)"
+    success "--date=$date --lts --days=eol-server" "1826"
+    success "--date=$date --lts --days=eol-server -c" "precise 1826"
+    success "--date=$date --lts --days=eol-server -f" "Ubuntu 12.04 LTS \"Precise Pangolin\" 1826"
+    success "--date=$date --lts --days=eol-server -r" "12.04 LTS 1826"
 
     # day before raring was released
     date=2013-04-24
