@@ -8,6 +8,11 @@ distro-info (0.25) UNRELEASED; urgency=medium
   * Bump copyright years.
   * Re-black Python.
 
+  [ Brian Murray ]
+  * Provide support for the milestone eol-esm and add filters for
+    supported-esm to ubuntu-distro-info along with the python and perl
+    modules. (LP: #1808038)
+
  -- Stefano Rivera <stefanor@debian.org>  Wed, 27 Jan 2021 19:46:16 -0700
 
 distro-info (0.24) unstable; urgency=medium
